--- a/.gitignore
+++ b/.gitignore
@@ -172,3 +172,51 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# Cursor rules
+cursorrules
+.cursor/rules
+
+# Frontend
+node_modules/
+.next/
+.nuxt/
+.vite/
+*.local
+.env*.local
+.DS_Store
+
+# IDE
+.vscode/
+.idea/
+*.sublime-*
+*.swp
+*.swo
+
+# Dependencies
+yarn.lock
+package-lock.json
+pnpm-lock.yaml
+
+# Build
+frontend/dist/
+frontend/build/
+frontend/.next/
+frontend/out/
+
+# Testing
+frontend/coverage/
+backend/coverage/
+
+# Logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+
+# TypeScript
+*.tsbuildinfo
+next-env.d.ts
+
+# Docker
+docker-compose.override.yml
