--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,5 +6,7 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
+COPY wait-for-it.sh .
+RUN chmod +x wait-for-it.sh
 
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"] 
+CMD ["sh", "-c", "python seed_data.py && ./wait-for-it.sh postgres:5432 -- uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"] 
