--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@headlessui/react": "^2.0.0",
     "@heroicons/react": "^2.0.0",
-    "@tanstack/react-query": "^5.0.0",
     "@types/websocket": "^1.0.10",
     "axios": "^1.6.0",
     "clsx": "^2.0.0",
@@ -21,8 +20,10 @@
     "recharts": "^2.10.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@tanstack/react-query": "^5.79.0",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
+    "@types/recharts": "^1.8.29",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.0.0",
